# tritongrader

./: .style.yapf  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
example/: README.md  test_autograder.py
example/example/submission/: palindrome.c
example/example/tests/exp/: err1  out2  out5  out7
example/example/tests/in/: cmd5  test5  test7
src/grader/: __init__.py  autograder.py  helper_methods.py  rubric.py  test_cases.py  test_suite.py
src/tritongrader/: __init__.py  autograder.py  build_rule.py  bulk_loader.py  formatter.py  results_formatter.py  rubric.py  runner.py  test_case.py  test_cases.py  test_suite.py  utils.py  visibility.py
src/tritongrader/test_case/: __init__.py  basic_test_case.py  custom_test_case.py  io_test_case.py  runner.py  test_case_base.py
test/: test_autograder.py
test/example/submission/: palindrome.c
test/example/tests/exp/: out4
test/example/tests/in/: cmd2  cmd4
tests/: test_autograder.py
tests/example/submission/: palindrome.c
tests/example/tests/exp/: out3  out6
tests/example/tests/in/: cmd1  cmd3  test6
wrappers/: .gitignore  build  end  first-stage  requirements.txt  run_autograder  setup.sh  start
