[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tritongrader"
version = "0.0.1"
authors = [
  { name="Jerry Yu" },
]
description = "A lightweight Python package for building autograders."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
calssifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/jyu283/gradescope.py"

